# DemoApplication

./: CMakeLists.txt  CarrierTronicQt.pro  Dockerfile  Dockerfile.debug  Dockerfile.sdk  README.md  applicationbridge.cpp  applicationbridge.h  docker-compose.prod.yml  docker-compose.yml  main.cpp  qml.qrc  qtquickcontrols2.conf  resources.qrc
.conf/: .container  update.json
.github/workflows/: build-application.yaml
qml/: CarrierTronicQt.code-workspace  MainHeader.qml  demoApplication.json  main.qml
qml/CAN/: CAN.qml  CANDump.qml
qml/Dashboard/: Dashboard.qml  DashboardButton.qml
qml/Diashow/: Diashow.qml
qml/Diashow/Gallery/: Gallery.qml
qml/Diashow/SlideShow/: SlideShow.qml
qml/DisplayTest/: DisplayTest.qml  DisplayTestButton.qml
qml/General/: Clock.qml  Icon.qml  IconButton.qml  MaterialIcon.qml
qml/MultiTouch/: MultiTouch.qml  MultiTouchComponent.qml  MultiTouchIndicator.qml  MultiTouchPointView.qml
qml/Settings/: Settings.qml  SettingsBrightness.qml  SettingsFlash.qml  SettingsNetwork.qml
qml/Terminal/: Terminal.qml
resources/JSFiles/: Icon.js
